# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: hello-world.yml
gendiff/: __init__.py  cli.py  difference.py  generate_diff.py  parser_end  parser_end.py
gendiff/formater/: plain.py  stylish.py  to_json.py  to_plain.py  to_stylish.py
gendiff/scripts/: gendiff.py
tests/: diff_json.py  test_diff_json.py
tests/fixtures/: output_json.txt
