[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Difference between two files and output in format"
authors = ["prStudentka"]
repository = "https://github.com/prStudentka/python-project-50"
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'
